# CRUD-project

./: docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  requirements.txt  router.py  schemas.py
